# template-dl-devcontainer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yaml
